# markdown-knowledge-rag

./: .env.example  .gitignore  GPU_SETUP.md  LMSTUDIO.md  README.md  check_gpu.py  check_torch.py  hello.py  kb_rag.py  pyproject.toml  run.bat
docs/: exemplo.md
