[project]
name = "kb-rag"
version = "0.1.0"
description = "Sistema RAG para base de conhecimento usando arquivos Markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.3.0",
]
